[conf] use recommended elasticsearch JVM settings for all builds